# firefly-engine-v2

./: CMakeLists.txt  README.md  compile_commands.json  imgui.ini
cmake/imguizmo/: CMakeLists.txt
data/: test.yaml
data/example_proj/: .ffesettings  .ffpsettings  ffproj  ffpsettings  scene2.yaml
include/: Camera.hpp  Components.hpp  EngineSettings.hpp  Entity.hpp  Framebuffer.hpp  Geometry.hpp  ImGuiContentBrowser.hpp  ImGuiDemoWindowPane.hpp  ImGuiHeirarchyPane.hpp  ImGuiInspectorPane.hpp  ImGuiLayer.hpp  ImGuiLogPane.hpp  ImGuiMenuPane.hpp  ImGuiPane.hpp  ImGuiViewportPane.hpp  Logger.hpp  OrthographicCamera.hpp  PerspectiveCamera.hpp  Project.hpp  Renderer.hpp  Scene.hpp  Scene2.hpp  Shader.hpp  Texture.hpp  Util.hpp  Window.hpp
res/: shape_renderer.frag  shape_renderer.vert  test.frag  test.vert
res/shaders/: shape_renderer.frag  shape_renderer.vert
src/: Camera.cpp  Entity.cpp  Framebuffer.cpp  Geometry.cpp  ImGuiContentBrowser.cpp  ImGuiDemoWindowPane.cpp  ImGuiHeirarchyPane.cpp  ImGuiInspectorPane.cpp  ImGuiLayer.cpp  ImGuiLogPane.cpp  ImGuiMenuPane.cpp  ImGuiViewportPane.cpp  Logger.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp  Project.cpp  Renderer.cpp  Scene.cpp  Scene2.cpp  Shader.cpp  Texture.cpp  Util.cpp  Window.cpp  main.cpp  stb_impl.cpp
